shared/bitint/tests_error/bitint_literals_unrelated_error.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `,`
  --> tests_error/bitint_literals_unrelated_error.rs:11:17
   |
11 |     syntax_error,
   |                 ^ expected one of 8 possible tokens

error: whoops
 --> tests_error/bitint_literals_unrelated_error.rs:9:5
  |
9 |     compile_error!("whoops");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `unresolved_function_name` in this scope
 --> tests_error/bitint_literals_unrelated_error.rs:7:5
  |
7 |     unresolved_function_name();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
